--- a/templates/print.html
+++ b/templates/print.html
@@ -100,7 +100,7 @@
               </div>
               <h3>Bill of Lading</h3>
               <img
-                  src="https://raw.githubusercontent.com/Cat9199/SpeedLinkSys/main/static/images/logob.png"
+              src="{{ url_for('static',filename='images/logo.jpg')}}" 
                   alt="Company Logo"
                   class="company-logo"
                   width="50px"
