--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.cdnfonts.com/css/barcode-font" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -21,7 +22,10 @@
       direction: rtl;
       min-height: 100vh;
     }
-
+.barcode {
+  font-family: 'barcode font', sans-serif;
+  font-size : 50px;
+}
     .page {
       display: flex;
       min-height: 100vh;
@@ -251,7 +255,7 @@
       display: none;
     }
   </style>
-  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" integrity="sha512-qZvrmS2ekKPF2mSznTQsxqPgnpkI4DNTlrdUmTzrDgektczlKNRRhy5X5AAOnx5S09ydFYWWNSfcEqDTTHgtNA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/logob.png') }}" />
 </head>
 
