--- a/templates/users.html
+++ b/templates/users.html
@@ -62,9 +62,26 @@
       <p>عدد الشحنات : {{ user.shipments }}</p>
       <p>رمز المحفظة: {{ user.wallet_code }}</p>
       <p>الرصيد: {{ user.dues }}جنية مصري</p>
-      <a href="/delete/{{ user.id }}" class="delete-button">حذف</a>
-      <a href="/dprice/{{ user.id }}" class="deliver-button">اسعار الشحن</a>
-      <a href="/exp/{{ user.id }}" class="deliver-button" style="background-color: cornflowerblue;">استخراج فتورة</a>
+     
+      <a href="/dprice/{{ user.id }}" class="deliver-button"
+      style="
+    display: flex;
+    align-content: center;
+"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tags-fill" viewBox="0 0 16 16">
+  <path d="M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+  <path d="M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z"/>
+</svg>اسعار الشحن</a>
+      <a href="/exp/{{ user.id }}" class="deliver-button" style="
+      display: flex;
+      align-content: center;background-color: cornflowerblue;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-shield-fill" viewBox="0 0 16 16">
+        <path d="M5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.775 11.775 0 0 1-2.517 2.453 7.159 7.159 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7.158 7.158 0 0 1-1.048-.625 11.777 11.777 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 62.456 62.456 0 0 1 5.072.56z"/>
+      </svg>استخراج فتورة</a>
+      <a href="/delete/{{ user.id }}" class="delete-button" style="
+      display: flex;
+      align-content: center;
+  "><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+    <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+  </svg>حذف</a>
     </div>
     {% endfor %}
   </div>
