--- a/templates/addfile.html
+++ b/templates/addfile.html
@@ -236,21 +236,10 @@
        <center>
            
             <div class="form" id="form2">
+<form method="POST" action="/upload" enctype="multipart/form-data">
+    <input type="file" name="file" accept=".csv ">
+    <input type="submit" value="Upload">
+</form>
 
-                <form>
-                    <h2>رفع الملفات</h2>
-                    <div class="upload-container">
-                        <label for="fileInput" class="file-label">
-                            اسحب الملفات هنا أو انقر للتصفح
-                        </label>
-                        <input type="file" id="fileInput" class="file-input" accept=".xlsx, .xls, .csv, .xlsm, .xlsb, .xml, .ods" />
-                    </div><br>
-                    <div class="file-name" id="file-name">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark" viewBox="0 0 16 16">
-                            <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z"/>
-                          </svg> <span id="file-name-span"></span>
-                    </div><br>
-                    <button type="submit">إرسال</button>
-                </form>
             </div>
         </div></center>{% endblock %}
